--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="container">
       <h2 class="h2">Виды наших тележек</h2>
       <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-        <ul class="nav nav-tabs">
+        <ul class="nav nav-tabs link-telezki">
           <li class="active"><a data-toggle="tab" href="#panel1">Многоярусные тележки</a></li>
           <li><a data-toggle="tab" href="#panel2">Большегрузые тележки</a></li>
           <li><a data-toggle="tab" href="#panel3">Ручные двухколесные тележки</a></li>
@@ -200,7 +200,7 @@
         <input type="button" class="submit_price submit_price_tab" value="ЗАКАЗАТЬ ПОЛНЫЙ ПРАЙС-ЛИСТ">
       </div>
       <div class="col-lg-6 col-lg-offset-1 col-md-6 col-md-offset-1 col-sm-7 col-sm-offset-0 col-xs-12">
-        <div class="tab-content">
+        <div class="tab-content telezki_vid_slaider">
           <div id="panel1" class="tab-pane fade in active">
             <div class="owl-carousel product product1">
               <div class="oneProduct">
