второй слайдер - bag fix

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
   <div class="block_7" id="ex4">
 
 
-      <div class="proektirovanie_proizvodstvo pp_none">
+      <div class="proektirovanie_proizvodstvo pp_none block_proektirovanie">
         <h2 class="h2">Проектирование</h2>
         <div class="owl-carousel slider_proizvodstvo slider_proizvodstvo_1">
           <div class="oneSlide oneSlide1">
@@ -430,7 +430,7 @@
         </div>
       </div>
 
-      <div class="proektirovanie_proizvodstvo pp_block">
+      <div class="proektirovanie_proizvodstvo pp_block block_proizvodstvo">
         <h2 class="h2">Производство</h2>
         <div class="owl-carousel slider_proizvodstvo slider_proizvodstvo_2">
           <div class="oneSlide oneSlide1">
